
* LUCENE-2084: Change IndexableBinaryStringTools to work on byte[] and char[]
  directly, instead of Byte/CharBuffers, and modify CollationKeyFilter to
  take advantage of this for faster performance.
  (Steven Rowe, Uwe Schindler, Robert Muir)

* LUCENE-2188: Add a utility class for tracking deprecated overridden
  methods in non-final subclasses.
  (Uwe Schindler, Robert Muir)
   
Build

 * LUCENE-2124: Moved the JDK-based collation support from contrib/collation 
   into core, and moved the ICU-based collation support into contrib/icu.  
   (Robert Muir)

Test Cases

* LUCENE-2037 Allow Junit4 tests in our envrionment (Erick Erickson
  via Mike McCandless)

* LUCENE-1844: Speed up the unit tests (Mark Miller, Erick Erickson,
  Mike McCandless)

* LUCENE-2065: Use Java 5 generics throughout our unit tests.  (Kay
  Kay via Mike McCandless)

* LUCENE-2114: Change TestFilteredSearch to test on multi-segment
  index as well; improve javadocs of Filter to call out that the
  provided reader is per-segment (Simon Willnauer via Mike McCandless)

* LUCENE-2155: Fix time and zone dependent localization test failures
  in queryparser tests. (Uwe Schindler, Chris Male, Robert Muir)

* LUCENE-2170: Fix thread starvation problems.  (Uwe Schindler)

* LUCENE-2211: Improves BaseTokenStreamTestCase to use a fake attribute
  that checks if clearAttributes() was called correctly.
  (Uwe Schindler, Robert Muir)
  
* LUCENE-2207, LUCENE-2219: Improve BaseTokenStreamTestCase to check if 
  end() is implemented correctly.  (Koji Sekiguchi, Robert Muir)
  
======================= Release 3.0.0 2009-11-25 =======================

Changes in backwards compatibility policy

* LUCENE-1979: Change return type of SnapshotDeletionPolicy#snapshot()
  from IndexCommitPoint to IndexCommit. Code that uses this method
  needs to be recompiled against Lucene 3.0 in order to work. The
  previously deprecated IndexCommitPoint is also removed.
  (Michael Busch)
