@@ -142,22 +142,9 @@ specifier|final
 name|CharArraySet
 name|EMPTY_SET
 init|=
-name|CharArraySet
-operator|.
-name|unmodifiableSet
-argument_list|(
 operator|new
-name|CharArraySet
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|,
-literal|0
-argument_list|,
-literal|false
-argument_list|)
-argument_list|)
+name|EmptyCharArraySet
+argument_list|()
 decl_stmt|;
 DECL|field|charUtils
 specifier|private
@@ -1992,7 +1979,6 @@ comment|/**    * Efficient unmodifiable {@link CharArraySet}. This implementatio
 DECL|class|UnmodifiableCharArraySet
 specifier|private
 specifier|static
-specifier|final
 class|class
 name|UnmodifiableCharArraySet
 extends|extends
@@ -2133,6 +2119,126 @@ operator|new
 name|UnsupportedOperationException
 argument_list|()
 throw|;
+block|}
+block|}
+comment|/**    * Empty {@link UnmodifiableCharArraySet} optimized for speed.    * Contains checks will always return<code>false</code> or throw    * NPE if necessary.    */
+DECL|class|EmptyCharArraySet
+specifier|private
+specifier|static
+specifier|final
+class|class
+name|EmptyCharArraySet
+extends|extends
+name|UnmodifiableCharArraySet
+block|{
+DECL|method|EmptyCharArraySet
+specifier|private
+name|EmptyCharArraySet
+parameter_list|()
+block|{
+name|super
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_CURRENT
+argument_list|,
+operator|new
+name|char
+index|[
+literal|0
+index|]
+index|[]
+argument_list|,
+literal|false
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|contains
+specifier|public
+name|boolean
+name|contains
+parameter_list|(
+name|char
+index|[]
+name|text
+parameter_list|,
+name|int
+name|off
+parameter_list|,
+name|int
+name|len
+parameter_list|)
+block|{
+if|if
+condition|(
+name|text
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|()
+throw|;
+return|return
+literal|false
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|contains
+specifier|public
+name|boolean
+name|contains
+parameter_list|(
+name|CharSequence
+name|cs
+parameter_list|)
+block|{
+if|if
+condition|(
+name|cs
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|()
+throw|;
+return|return
+literal|false
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|contains
+specifier|public
+name|boolean
+name|contains
+parameter_list|(
+name|Object
+name|o
+parameter_list|)
+block|{
+if|if
+condition|(
+name|o
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|()
+throw|;
+return|return
+literal|false
+return|;
 block|}
 block|}
 block|}
