@@ -3287,6 +3287,237 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/**    * Tests a special case of {@link CharArraySet#copy(Version, Set)} where the    * set to copy is the {@link CharArraySet#EMPTY_SET}    */
+DECL|method|testCopyEmptySet
+specifier|public
+name|void
+name|testCopyEmptySet
+parameter_list|()
+block|{
+name|assertSame
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+argument_list|,
+name|CharArraySet
+operator|.
+name|copy
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_CURRENT
+argument_list|,
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Smoketests the static empty set    */
+DECL|method|testEmptySet
+specifier|public
+name|void
+name|testEmptySet
+parameter_list|()
+block|{
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|stopword
+range|:
+name|TEST_STOP_WORDS
+control|)
+block|{
+name|assertFalse
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|contains
+argument_list|(
+name|stopword
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|assertFalse
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|Object
+operator|)
+literal|"foo"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|Object
+operator|)
+literal|"foo"
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+operator|.
+name|contains
+argument_list|(
+literal|"foo"
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test for NPE    */
+DECL|method|testContainsWithNull
+specifier|public
+name|void
+name|testContainsWithNull
+parameter_list|()
+block|{
+name|CharArraySet
+name|set
+init|=
+operator|new
+name|CharArraySet
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_CURRENT
+argument_list|,
+literal|1
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|set
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|char
+index|[]
+operator|)
+literal|null
+argument_list|,
+literal|0
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"null value must raise NPE"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|set
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|CharSequence
+operator|)
+literal|null
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"null value must raise NPE"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|set
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|Object
+operator|)
+literal|null
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"null value must raise NPE"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{}
+block|}
 block|}
 end_class
 end_unit
